# gage

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  dist-workspace.toml  justfile  pyproject.toml
.github/actions/crate-version/: action.yml
.github/workflows/: build.yml  debug.yml  release.yml
.github/workflows/includes/: build-setup.yml
docs/: index.md  issue.md  issues.md  notes.md  scan.md  scanner.md  scanners.md  scans.md  sessions.md  start.md  uninstall.md
gage-claude/: Cargo.toml
gage-claude/config/.claude-plugin/: marketplace.json  plugin.json
gage-claude/config/skills/review/: SKILL.md
gage-claude/src/: config.rs  entry.rs  home.rs  lib.rs  plugin.rs  proc.rs  project.rs  session.rs  session_reader.rs
gage-cli/: Cargo.toml  build.rs
gage-cli/src/: author.rs  cmd_config.rs  cmd_init.rs  cmd_issue.rs  cmd_note.rs  cmd_query.rs  cmd_scan.rs  cmd_session.rs  cmd_test.rs  dialog.rs  human.rs  limit.rs  main.rs  scan_progress.rs  style.rs  target_content.rs
gage-core/: Cargo.toml
gage-core/src/: config.rs  datetime.rs  lib.rs  text_resolve.rs  uuid.rs
gage-db/: Cargo.toml
gage-db/src/: db.rs  issue.rs  lib.rs  note.rs  note_relation.rs  scan.rs  target.rs
gage-eval/: Cargo.toml
gage-eval/evals/: close-issue.toml  get-issue.toml  list-issues.toml  query.toml
gage-eval/fixtures/: .gitignore
gage-eval/fixtures/query/projects/-tmp-code/: 55f9d570-7343-4a79-acd1-6cb4b57e0a17.jsonl  751039a8-ff60-4863-bc5b-2c4af52bd0c3.jsonl  7d62c8d0-ee46-41c6-89b9-26cf82e35e36.jsonl  c2807837-7b1b-4a67-a5c2-4f3dd1c6a1fc.jsonl
gage-eval/src/: eval.rs  limit.rs  main.rs  run.rs  score.rs  storage.rs  style.rs  tokens.rs  view.rs
gage-lsp/: Cargo.toml
gage-lsp/src/: main.rs
gage-mcp/: Cargo.toml
gage-mcp/config/: server-instructions.md
gage-mcp/config/tools/: CloseIssue.md  GetIssue.md  ListIssues.md  Query.md
gage-mcp/src/: lib.rs  server.rs  tool.rs
gage-mcp/src/tools/: close_issue.rs  get_issue.rs  list_issues.rs  mod.rs  query.rs
gage-query/: Cargo.toml
gage-query/src/: context.rs  filter.rs  lib.rs  print_format.rs  repl.rs
gage-query/src/tables/: config.rs  entry.rs  issue.rs  issue_evidence.rs  message.rs  mod.rs  note.rs  session.rs
gage-query/testdata/-home-test-other/: ff000000-1111-2222-3333-444444444444.jsonl
gage-query/testdata/-home-test-project/: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee.jsonl  bbbbbbbb-bbbb-bbbb-bbbb-bbbbbbbbbbbb.jsonl  cccccccc-cccc-cccc-cccc-cccccccccccc.jsonl
gage-query/tests/: config_sql.rs  entry_sql.rs  message_sql.rs  note_sql.rs  session_sql.rs
gage-query/tests/common/: mod.rs
gage-scan/: Cargo.toml
gage-scan/benches/: vm_lifecycle.rs
gage-scan/src/: event.rs  lib.rs  resolve.rs  runner.rs  scanner.rs  scanner_scheme.rs  scheduler.rs  test_runner.rs
gage-scan/src/runtime/: config.rs  datetime.rs  db.rs  error.rs  ignore.rs  io.rs  json.rs  macros.rs  mod.rs  query.rs  result.rs  scan.rs  state.rs  stats.rs  template.rs  value.rs
gage-scan/src/runtime/llm/: anthropic.rs  mod.rs
gage-scan/tests/: error.rs  macros.rs  rand.rs  scanner_config.rs  template.rs  test-fixture.jsonc
gage-tui/: Cargo.toml
gage-tui/src/: app.rs  doc.rs  lib.rs  markdown.rs  message.rs  outline.rs  session.rs  style.rs  syntax.rs
gage/_internal/: python_util.py  run_util.py  test.py
scanners/: tests.rn
scanners/effort/: README.md  effort-hook.md  effort-hook.sh  scanner.rn
scanners/hidden-thinking/: README.md  issue.md  scanner.rn
scanners/hidden-thinking/docs/: index.md
scanners/session-retention/: README.md  issue.md  scanner.rn
scanners/session-retention/docs/: index.md
scanners/user-frustration/: README.md  scanner.rn
scanners/user-frustration/docs/: index.md
scripts/: install.sh
tests/: cmd-help.md  cmd-main.md  example-hello.md  example-hydra.md
