[workspace]
members = [
    "gage-cli",
    "gage-claude",
    "gage-core",
    "gage-db",
    "gage-lsp",
    "gage-mcp",
    "gage-query",
    "gage-scan",
    "gage-tui",
]
resolver = "2"

[workspace.package]
version = "0.0.1-pre.2"
edition = "2024"

[workspace.dependencies]
datafusion = { version = "52.4.0", default-features = false, features = [
    "sql",
    "nested_expressions",
    "datetime_expressions",
    "regex_expressions",
    "string_expressions",
    "unicode_expressions",
    "crypto_expressions",
    "encoding_expressions",
    "recursive_protection",
] }
arrow = "57.3.0"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.6.0", features = ["derive"] }
cliclack = "0.3"
console = "0.16.2"
humantime = "2"
indicatif = "0.18"
libc = "0.2"
num_cpus = "1"
regex = "1"
rust-embed = "8"
rustyline = "17.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { version = "0.9.34", default-features = false }
tabled = { version = "0.20", features = ["ansi"] }
tempfile = "3"
tokio = "1.50.0"
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[workspace.lints.clippy]
let_underscore_must_use = "warn"
map_err_ignore = "warn"
unused_result_ok = "warn"
indexing_slicing = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
