[package]
name = "gage-claude"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
gage-core = { path = "../gage-core" }
ignore = "0.4"
regex = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
