[package]
name = "gage-db"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
gage-core = { path = "../gage-core" }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
