[package]
name = "gage-mcp"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true }
gage-claude = { path = "../gage-claude" }
gage-core = { path = "../gage-core" }
gage-db = { path = "../gage-db" }
gage-query = { path = "../gage-query" }
gage-scan = { path = "../gage-scan" }
rmcp = { version = "0.16", features = ["server", "transport-io", "schemars"] }
schemars = "1"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-util = { workspace = true }
num_cpus = { workspace = true }

[lints]
workspace = true
