[package]
name = "gage-query"
version.workspace = true
edition.workspace = true

[dependencies]
arrow = { workspace = true, features = ["prettyprint"] }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
datafusion = { workspace = true }
datafusion-functions-json = "0.52"
gage-core = { path = "../gage-core" }
gage-db = { path = "../gage-db" }
gage-claude = { path = "../gage-claude" }
rustyline = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
