[package]
name = "gage-scan"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
codespan-reporting = "0.13.1"
datafusion = { workspace = true }
gage-core = { path = "../gage-core" }
gage-db = { path = "../gage-db" }
gage-query = { path = "../gage-query" }
minijinja = "2"
rune = { git = "https://github.com/gar1t/rune.git", branch = "gage" }
rune-modules = { git = "https://github.com/gar1t/rune.git", branch = "gage", features = ["time", "rand", "thread_rng"] }
rust-embed = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
petgraph = "0.6"
gage-claude = { path = "../gage-claude" }
num_cpus = { workspace = true }

[[bench]]
name = "vm_lifecycle"
harness = false

[lints]
workspace = true
